core: Fix missing gtk-doc markers in API docs

Spotted by Rico Tzschichholz <ricotz@t-online.de>

https://bugzilla.gnome.org/show_bug.cgi?id=769127#c4